<resources>
    <string name="app_name">Slangify</string>

    <string name="create_challenge_title">What\'s the language?</string>
    <string name="create_challenge_submit">Challenge Accepted!</string>
    <string name="create_challenge_sub_title">Feeling adventurous?</string>
    <string name="capture_video_translation_title">(What you actually said)</string>
    <string name="ready_set_dialog_title">The sentence will appear for 5 seconds</string>
    <string name="ready_set_dialog_subtitle">Give it your best shot</string>
    <string name="capture_video_done">Nice Try!</string>
    <string name="display_language">Language: %1$s</string>
    <string name="display_translation">Translation: %1$s</string>
    <string name="error_language_not_supported">Language is not supported (yet..)</string>
    <string name="error_language_not_chosen">Please choose a language first!</string>
    <string name="go_to_home">Take me home</string>
    <string name="rude_slider_bottom">meh.</string>
    <string name="rude_slider_top">oh yes!</string>
    <string name="skip_login">Skip</string>
    <string name="share_video_title">Share Video</string>


    <!-- Shared Preferences -->
    <string name="shared_preferences_key">slangifyPreferences</string>
    <string name="sp_has_square_ratio">spHasSquareRatio</string>
    <string name="sp_screen_height">spScreenHeight</string>
    <string name="sp_screen_width">spScreenWidth</string>
    <string name="sp_best_ratio_preview_index">spBestPreviewIndex</string>
    <string name="sp_best_ratio_video_index">spBestVideoIndex</string>
    <string name="sp_directory_path">spDirectoryPath</string>
    <string name="shared_preferences">SharedPreferences</string>
    <string name="permission_necessary">You have to approve all the permissions in order to use Slangify</string>
</resources>
