<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_create_gradient"
    android:orientation="vertical"
    android:paddingLeft="@dimen/create_padding_left"
    android:paddingRight="@dimen/create_padding_right"
    android:paddingTop="@dimen/create_padding_top">

    <com.devspark.robototextview.widget.RobotoTextView

        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_challenge_title"
        app:typeface="roboto_slab_bold" />


    <com.devspark.robototextview.widget.RobotoAutoCompleteTextView
        android:id="@+id/languages_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dropdown_margin_top"
        android:hint="Dutch"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_grey"
        app:typeface="roboto_slab_regular"
        android:theme="@style/Autocomplete" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/scale_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_subtitle_margin_top"
        android:text="@string/create_challenge_sub_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_title_text_size"
        app:typeface="roboto_slab_bold" />

    <SeekBar
        android:id="@+id/rude_seekbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seekbar_height"
        android:layout_marginTop="@dimen/slider_margin_top"
        android:progress="5"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:progressDrawable="@drawable/slider_progress"
        android:thumb="@drawable/slider_thumb"
        android:thumbOffset="0dp"
        android:splitTrack="false"
        android:max="10"/>




    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rude_slider_top"
            android:layout_gravity="right|center_vertical"
            app:typeface="roboto_slab_regular"
            android:textSize="@dimen/rude_slider_text_size"
            android:textColor="@color/slider_text"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/robotoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/rude_slider_bottom"
            android:textSize="@dimen/rude_slider_text_size"
            app:typeface="roboto_slab_regular"
            android:textColor="@color/slider_text"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/create_btn_height"
        android:layout_marginTop="@dimen/create_submit_btn_margin_top"
        >


        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_btn_height"

            android:background="@drawable/bg_rounded_corners_primary"
            android:padding="@dimen/create_submit_btn_padding"
            android:text="@string/create_challenge_submit"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/create_btn_text_size"
            app:typeface="roboto_slab_regular" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:visibility="gone"
            android:progressDrawable="@drawable/primary_progress" />



    </FrameLayout>







</LinearLayout>